ai-task-platform/bridge/base/mongo-deployment.yaml
#! mongo-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongo
    namespace: ai-task-platform
    labels:
        com.docker.compose.project: ai-task-platform
        com.docker.compose.service: mongo
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: ai-task-platform
            com.docker.compose.service: mongo
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: ai-task-platform
                com.docker.compose.service: mongo
                com.docker.compose.network.ai-task-net: "true"
        spec:
            containers:
                - name: mongo
                  image: mongo:6.0
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
                    periodSeconds: 10
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: mongo-27017
                      containerPort: 27017
                  volumeMounts:
                    - name: data-db
                      mountPath: /data/db
            volumes:
                - name: data-db
                  persistentVolumeClaim:
                    claimName: mongo-mongo-data
