ai-task-platform/bridge/base/redis-deployment.yaml
#! redis-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
    namespace: ai-task-platform
    labels:
        com.docker.compose.project: ai-task-platform
        com.docker.compose.service: redis
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: ai-task-platform
            com.docker.compose.service: redis
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: ai-task-platform
                com.docker.compose.service: redis
                com.docker.compose.network.ai-task-net: "true"
        spec:
            containers:
                - name: redis
                  image: redis:7-alpine
                  imagePullPolicy: IfNotPresent
                  args:
                    - redis-server
                    - --appendonly
                    - yes
                  livenessProbe:
                    exec:
                        command: [redis-cli ping]
                    periodSeconds: 10
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: redis-6379
                      containerPort: 6379
