ai-task-platform/bridge/base/backend-service.yaml
# check if there is at least one published port

#! backend-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: backend-published
    namespace: ai-task-platform
    labels:
        com.docker.compose.project: ai-task-platform
        com.docker.compose.service: backend
spec:
    selector:
        com.docker.compose.project: ai-task-platform
        com.docker.compose.service: backend
    ports:
        - name: backend-5001
          port: 5001
          protocol: TCP
          targetPort: backend-5000

# check if there is at least one published port
