ai-task-platform/bridge/base/frontend-expose.yaml
#! frontend-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: frontend
    namespace: ai-task-platform
    labels:
        com.docker.compose.project: ai-task-platform
        com.docker.compose.service: frontend
spec:
    selector:
        com.docker.compose.project: ai-task-platform
        com.docker.compose.service: frontend
    ports:
        - name: frontend-80
          port: 80
          targetPort: frontend-80
        - name: frontend-8080
          port: 8080
          targetPort: frontend-8080
