ai-task-platform/bridge/base/mongo-service.yaml
#! mongo-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: mongo-published
    namespace: ai-task-platform
    labels:
        com.docker.compose.project: ai-task-platform
        com.docker.compose.service: mongo
spec:
    selector:
        com.docker.compose.project: ai-task-platform
        com.docker.compose.service: mongo
    ports:
        - name: mongo-27017
          port: 27017
          protocol: TCP
          targetPort: mongo-27017

# check if there is at least one published port
