ai-task-platform/bridge/base/ai-task-net-network-policy.yaml
#! ai-task-net-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: ai-task-net-network-policy
    namespace: ai-task-platform
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.ai-task-net: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.ai-task-net: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.ai-task-net: "true"
